syntax = "proto3";

package pb;
option go_package = "./pb";

// common
message User {
  int64 Id = 1;
  string Username = 2;
  string Avatar = 3;
  string Email = 4;
}

// register
message RegisterReq {
  string Username = 1;
  string Password = 2;
  string Email = 3;
  string Avatar = 4;
}

message RegisterResp {
  int32 Status = 1;
  string Data = 2;
  string Message = 3;
  string Error = 4;
}

// login
message LoginReq {
  string Email = 1;
  string Password = 2;
}

message Data {
  User User = 1;
  string Token = 2;
}

message LoginResp {
  int32 Status = 1;
  Data Data = 2;
  string Message = 3;
  string Error = 4;
}

// generate token
message GenerateTokenReq {
  int64 userId = 1;
}

message GenerateTokenResp {
  string accessToken = 1;
  int64  accessExpire = 2;
  int64  refreshAfter = 3;
}

// get user info
message GetUserInfoReq {
  int64 id = 1;
}

message GetUserInfoResp {
  int32 Status = 1;
  User Data = 2;
  string Message = 3;
  string Error = 4;
}

// 定义服务
service userrpc {
  rpc Register(RegisterReq) returns(RegisterResp);
  rpc Login(LoginReq) returns(LoginResp);
  rpc GenerateToken(GenerateTokenReq) returns(GenerateTokenResp);
  rpc GetUserInfo(GetUserInfoReq) returns(GetUserInfoResp);
}